--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+/* Сброс стилей */
 * {
   margin: 0;
   padding: 0;
@@ -12,43 +13,75 @@ a {
   text-decoration: none;
 }
 .container {
-  max-width: 1600px;
+  max-width: 100rem;
   margin: 0 auto;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+/* Хедер */
+.menu_mobile{
+  display: none;
+
+}
+.close{
+  display: block;
+  position: relative;
+  transform: translateY(3px);
+  
+}
+.menu_mobile span{
+  transition: all .4s;
+}
+.close span:nth-child(3){
+  opacity: 0;
+}
+.close span:nth-child(2){
+  transform: rotate(-45deg);
+  bottom: 0;
+
+}
+.close span:nth-child(1){
+  position: absolute;
+  left: 0;
+  transform: rotate(45deg);
+  width: 100%;
+  /* bottom: 0; */
+}
+.hiden{
+  overflow: hidden;
 }
 header {
-  max-width: 1600px;
+  max-width: 100rem;
   margin: 0 auto;
-  gap: 10px;
+  gap: .625rem;
 }
 .flex-left{
   display: flex;justify-content: flex-end;
 }
 .container_header {
-  padding-top: 5px;
-  padding-bottom: 25px;
+  padding-top: .3125rem;
+  padding-bottom: 1.5625rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 .container_logo {
-  width: 6.25rem;
-  height: 6.25rem;
+  width: 100px;
+  height: 100px;
   background-image: url("../img/logo_obuv.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
 }
 .container_menu {
-  width: calc(100% - 310px);
+  width: calc(100% - 19.375rem);
   display: flex;
   justify-content: flex-end;
 }
 .menu {
-  margin-right: 60px;
+  margin-right: 3.75rem;
   display: flex;
-  gap: 1.875rem;
+  gap: 30px;
 }
 .menu .active a {
   color: #f25862;
@@ -56,7 +89,7 @@ header {
 .menu a {
   cursor: pointer;
   font-family: Montserrat;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 700;
   text-transform: uppercase;
   color: #444;
@@ -66,11 +99,11 @@ header {
   color: #f25862;
 }
 .card img{
-  width: 22px;
+  width: 1.375rem;
 }
 .card{
   position: relative;
-  padding: .125rem;
+  padding: 2px;
   transition: all .4s;
   border-radius: 50%;
 }
@@ -80,13 +113,13 @@ header {
 } 
 .card span{
   position: absolute;
-  font-size: 14px;
+  font-size: .875rem;
   background-color: #616161;
   border-radius: 50%;
   color: white;
-  padding: 2px;
-  top: -8px;
-  left: 15px;
+  padding: .125rem;
+  top: -0.5rem;
+  left: .9375rem;
 }
 
 .breadcrumb ol {
@@ -95,11 +128,11 @@ header {
 }
 .breadcrumb a::after {
   content: ">";
-  margin: 5px;
+  margin: .3125rem;
   color: #999999;
 }
 .breadcrumb a {
-  font-size: 12px;
+  font-size: .75rem;
   font-family: "Open Sans";
   color: #999999;
 }
@@ -109,21 +142,27 @@ header {
 .breadcrumb li {
   color: #999999;
 }
+
+
+/* Контент */
+
+
+
 .content {
-  margin-top: 20px;
+  margin-top: 1.25rem;
   display: flex;
-  gap: 10px;
-  margin-bottom: 80px;
+  gap: .625rem;
+  margin-bottom: 5rem;
 }
 .sidebar {
-  width: 270px;
+  width: 16.875rem;
 }
 .content_left {
   width: 100%;
 }
 aside h3 {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: .625rem;
+  margin-bottom: 1.25rem;
 }
 aside h3 span {
   color: #0f0f0f;
@@ -132,7 +171,7 @@ aside h3 span {
   line-height: 1.35;
 }
 aside li {
-  margin: 0.625rem 0.625rem;
+  margin: 10px 10px;
 }
 aside li a {
   font-family: "Open Sans";
@@ -140,7 +179,7 @@ aside li a {
   font-style: normal;
   color: #0f0f0f;
   transition: all 0.4s;
-  font-size: 16px;
+  font-size: 1rem;
 }
 aside li a:hover {
   color: #f25862;
@@ -151,17 +190,17 @@ aside li span {
 .content_left {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1.25rem;
+  gap: 20px;
 }
 .cart {
   cursor: pointer;
-  padding: 5px;
-  padding-bottom: 20px;
+  padding: .3125rem;
+  padding-bottom: 1.25rem;
   width: 100%;
   transition: all 0.2s;
 }
 .cart:hover {
-  box-shadow: 1px 1px 15px #6a6a6a;
+  box-shadow: .0625rem .0625rem .9375rem #6a6a6a;
 }
 
 .cart_photo {
@@ -176,7 +215,7 @@ aside li span {
 }
 .cart-title {
   font-family: Montserrat;
-  font-size: 16px;
+  font-size: 1rem;
   color: #0f0f0f;
   transition: all 0.4s;
   text-align: center;
@@ -186,50 +225,51 @@ aside li span {
 }
 .cart_footer .price {
   font-family: Montserrat;
-  font-size: 16px;
+  font-size: 1rem;
   color: #f25862;
-  margin-left: 20px;
+  margin-left: 1.25rem;
 }
 .cart_footer strike {
   color: #999999;
-  margin-right: 10px;
+  margin-right: .625rem;
 }
+/* Футер */
 footer {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
   background-color: #141414;
 }
 .footer_container {
   font-family: Montserrat;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
+  gap: 1.25rem;
 }
 .footer_container h2 {
   color: white;
   font-family: Montserrat;
-  font-size: 1.375rem;
+  font-size: 22px;
 }
 .footer_container p {
   color: white;
   font-family: Montserrat;
-  font-size: 1.125rem;
+  font-size: 18px;
 }
 .footer_container ul {
-  margin-top: 0.625rem;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
-  gap: 0.625rem;
+  gap: 10px;
 }
 .footer_container li {
-  border: 1px solid white;
-  padding: 0.625rem 0.9375rem;
+  border: .0625rem solid white;
+  padding: 10px 15px;
   transition: all 0.4s;
 }
 .footer_container li a {
   width: 100%;
   height: 100%;
-  font-size: 1.125rem;
+  font-size: 18px;
   color: white;
 
   transition: all 0.4s;
@@ -243,44 +283,37 @@ footer {
 
 .first_block .logo {
   background-image: url('../img/logo_obuv.svg');
-  width: 9.375rem;
-  height: 9.375rem;
+  width: 150px;
+  height: 150px;
   background-repeat: no-repeat;
   background-position: center;
-  margin-bottom: .9375rem;
-}
-.second_block {
+  margin-bottom: 15px;
 }
 .separator {
   width: 100%;
-  height: 0.0625rem;
+  height: 1px;
   background-color: white;
-  margin-bottom: 1.25rem;
+  margin-bottom: 20px;
 }
 
 .up_to_header {
   position: fixed;
   background-color: #141414;
-  width: 2.5rem;
-  height: 2.5rem;
-  bottom: 2.5rem;
-  right: 1.4rem;
+  width: 40px;
+  height: 40px;
+  bottom: 40px;
+  right: 22.4px;
   display: flex;
   justify-content: center;
-  padding: 0.125rem;
+  padding: 2px;
   border-radius: 50%;
   cursor: pointer;
   transition: all 0.4s;
   opacity: 0;
 }
-.menu_mobile{
-  display: none;
-}
-.hiden{
-  overflow: hidden;
-}
+/* Общие стили */
 
-@media (max-width:71.875rem) {
+@media (max-width:1150px) {
   .content_left{
     grid-template-columns: repeat(3 , 1fr);
   }
@@ -288,18 +321,18 @@ footer {
     grid-template-columns: repeat(2 , 1fr);
   }
   .third_block{
-    margin-top: 2.5rem;
+    margin-top: 40px;
   }
   .quarter_block{
-    margin-top: 2.5rem;
+    margin-top: 40px;
   }
 }
-@media (max-width:56.25rem) {
+@media (max-width:900px) {
   .container_menu{
     position: fixed;
-    height: calc(100vh - 6.25rem);
+    height: calc(100vh - 100px);
     width: 100%;
-    top: 6.25rem;
+    top: 100px;
     left: 100%;
     background-color: white;
     display: flex;
@@ -326,21 +359,21 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 22px;
-    height: 14px;
-    margin-right: 20px;
+    width: 1.375rem;
+    height: .875rem;
+    margin-right: 1.25rem;
   }
   .menu_mobile span{
     display: block;
     width: 100%;
-    height: 2px;
+    height: .125rem;
     background-color: #0f0f0f;
   }
   .container_header{
     padding-bottom: 0;
   }
 }
-@media (max-width:48rem) {
+@media (max-width:768px) {
   .content_left{
     grid-template-columns: 1fr;
   }
@@ -355,7 +388,7 @@ footer {
     text-align: center;
   }
 }
-@media (max-width:40rem) {
+@media (max-width:640px) {
   .footer_container{
     grid-template-columns: 1fr;
   }
