--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -20,6 +20,10 @@ a {
   padding-left: 40px;
   padding-right: 40px;
 }
+body{
+  display: flex;
+  flex-direction: column;
+}
 /* Хедер */
 .menu_mobile {
   display: none;
@@ -52,6 +56,7 @@ header {
   max-width: 1600px;
   margin: 0 auto;
   gap: 10px;
+  width: 100%;
 }
 .flex-left {
   display: flex;
